# tutorial-starting-point-main

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.clinerules/: clinerules.md
clineHistory/: cline_task_jun-15-2025_6-07-21-pm.md  cline_task_jun-15-2025_8-37-37-pm.md
cmake/: deps.cmake
src/: camera.cpp  camera.hpp  main.cpp  window.hpp
src/shaders/: main.glsl  shared.inl
